2009-11-12  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerSession.cs: Catch exceptions when getting
	  process name. Works around Mono bug with symlinked runtimes.

2009-11-11  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerSession.cs: Fix bad state check.

2009-11-11  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerEngine.cs:
	* SoftDebuggerSession.cs:
	* Mono.Debugger.Soft.dll:
	* RemoteSoftDebuggerSession.cs: Use new async launch/listen
	  APIs. Add proper support for parallel runtimes.

2009-11-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Fixed bad copy.

2009-11-10  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerEngine.cs: Don't try to parse version number.
	  Instead check for presence of Mono.Debugger.Soft.dll.

2009-11-10  Michael Hutchinson  <mhutchinson@novell.com>

	* RemoteSoftDebuggerSession.cs: Make GetListenMessage virtual
	  instead of abstract.

2009-11-09  Geoff Norton  <gnorton@novell.com>

	* SoftDebuggerSession.cs: Don't handle disconnects or 
	VMDeath, as we will (erroneously) try to resume a dead
	vm

2009-11-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Debugger.Soft.csproj: Add makefiles to project
	  files.

	* Makefile.am: Install the Mono.Debugger.Soft assembly.

2009-11-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Debugger.Soft.csproj: Don't local-copy project
	  refs.

2009-11-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Debugger.Soft.csproj: Wire the soft debug addin
	  into the build.

2009-11-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Debugger.Soft.csproj: Moved soft debug addin
	  from extras.

2009-11-09  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerSession.cs: Redirect errors. Improve handling of
	  vm disconnection.

2009-11-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Debugger.Soft.csproj: Added refs to GTK.
